--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="col-lg-5 banner-profile-img" data-tilt data-tilt-max="10" data-tilt-speed="400"
                         data-tilt-perspective="1000">
-                        <img src="img/eeee.png" alt="Hero Image" class="img-fluid hero-img">
+                        <img src="img/ejazz1.png" alt="Hero Image" class="img-fluid hero-img">
                     </div>
                 </div>
             </div>
@@ -124,8 +124,8 @@
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-12 col-lg-6 about-inner">
-                        <h4>Hello, My Name Is Jack Barker<br>
-                            Im <span>Web & UI Designer</span>
+                        <h4>Hello, My Name Is Muhammad Nurul Abser<br>
+                            Im a <span> Software Engineer (web)</span>
                         </h4>
                         <p>
                             It is a long established fact that a reader will be distracted by
@@ -137,27 +137,27 @@
                         <ul class="about-list">
                             <li>
                                 <span class="list-item-title">Name</span>
-                                <span class="list-item-value">Jack Barker</span>
+                                <span class="list-item-value">Muhammad Nurul Abser</span>
                             </li>
                             <li>
                                 <span class="list-item-title">Country</span>
-                                <span class="list-item-value">U.S.A</span>
+                                <span class="list-item-value">BANGLADESH</span>
                             </li>
                             <li>
                                 <span class="list-item-title">Age</span>
-                                <span class="list-item-value">29</span>
+                                <span class="list-item-value">27</span>
                             </li>
                             <li>
                                 <span class="list-item-title">Email</span>
-                                <span class="list-item-value">example@example.com</span>
+                                <span class="list-item-value">contact.nurulabser@gmail.com</span>
                             </li>
                             <li>
-                                <span class="list-item-title">Univercity</span>
-                                <span class="list-item-value">The New Scholl</span>
+                                <span class="list-item-title">University</span>
+                                <span class="list-item-value">Southeast University (SEU)</span>
                             </li>
                             <li>
                                 <span class="list-item-title">Phone</span>
-                                <span class="list-item-value">+3 123 456 78 88</span>
+                                <span class="list-item-value">+8801875916232</span>
                             </li>
                         </ul>
                         <a href="#" class="default-orange-btn">Download Cv</a>
