--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <!--// Counters End //-->
 
         <!--// My Price Start //-->
-        <section class="my-prices section pb-minus-70">
+        <!-- <section class="my-prices section pb-minus-70">
             <div class="container">
                 <div class="row justify-content-center text-center">
                     <div class="col-lg-7 col-sm-12">
@@ -566,7 +566,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--// Ny Price End //-->
 
         <!--// Portfolio Start //-->
